package ca.mcmaster.se2aa4.island.team38;

public enum Action {
    FLY, TURNRIGHT, TURNLEFT, SCAN, STOP, ECHO, ECHOFORWARD, ECHORIGHT, ECHOLEFT;
} 
