package ca.mcmaster.se2aa4.island.team38;

public enum Stage {
        START, TURN, ECHO, FIND_ISLAND, SCAN, SCAN_AND_TURN, OUT_OF_RANGE;
    }
